option('jpeg-qs', type : 'feature', value : 'enabled',
	description : 'Build with JPEG Quant Smooth integration')
option('libraw', type : 'feature', value : 'auto',
	description : 'Build with raw photo support, requires LibRaw')
option('librsvg', type : 'feature', value : 'auto',
	description : 'Build with SVG support, requires librsvg')
option('xcursor', type : 'feature', value : 'auto',
	description : 'Build with Xcursor support, requires libXcursor')
option('libwebp', type : 'feature', value : 'auto',
	description : 'Build with WEBP support, requires libwebp')
option('libheif', type : 'feature', value : 'auto',
	description : 'Build with HEIF/AVIF support, requires libheif')
option('libtiff', type : 'feature', value : 'auto',
	description : 'Build with TIFF support, requires libtiff')
option('gdk-pixbuf', type : 'feature', value : 'auto',
	description : 'Build with a fallback to the gdk-pixbuf library')
