option('lcms2', type : 'feature', value : 'auto',
	description : 'Build with Little CMS colour management')
option('libjpegqs', type : 'feature', value : 'auto',
	description : 'Build with JPEG Quant Smooth integration')
option('libraw', type : 'feature', value : 'auto',
	description : 'Build with raw photo support, requires LibRaw')
option('resvg', type : 'feature', value : 'disabled',
	description : 'Build with SVG support via resvg (pre-1.0 unstable API)')
option('librsvg', type : 'feature', value : 'auto',
	description : 'Build with SVG support, requires librsvg')
option('xcursor', type : 'feature', value : 'auto',
	description : 'Build with Xcursor support, requires libXcursor')
option('libheif', type : 'feature', value : 'auto',
	description : 'Build with HEIF/AVIF support, requires libheif')
option('libtiff', type : 'feature', value : 'auto',
	description : 'Build with TIFF support, requires libtiff')
option('gdk-pixbuf', type : 'feature', value : 'auto',
	description : 'Build with a fallback to the gdk-pixbuf library')
